Slight Changes in HTML files for color and stuff

--- a/assets/www/gwcall.html
+++ b/assets/www/gwcall.html
@@ -112,11 +112,8 @@
 	
     </script>
 </head>
-<body bgcolor="#c3dde0">
-<h2>List of Flight Agencies via SAP Gateway 2.0 SP4 and JSON</h2>
-<ul>
- <li><a href='index.html'>list demos</a></li>
-</ul>
+<body>
+<h3>List of Flight Agencies via SAP Gateway 2.0 SP4 and JSON</h3>
 <input type="button" value="Call SAP Gateway" onClick="readFromWeb()">
 <br><br> 
 <div id="lbUsers"></div> 
