--- a/assets/www/sqlite.html
+++ b/assets/www/sqlite.html
@@ -101,11 +101,8 @@
 	
     </script>
 </head>
-<body bgcolor="#c3dde0">
-<h2>PhoneGap Test Apps 1.0</h2>
-<ul>
- <li><a href='index.html'>list demos</a></li>
-</ul>
+<body>
+<h3>Using the SQLite API</h3>
 <input id="txFirstName" type="text" placeholder="FirstName"> 
 <input id="txLastName" type="text" placeholder="LastName"><br>
 <input type="button" value="Add record" onClick="addValueToDB()">
