--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -31,7 +31,7 @@
 	
     </script>
 </head>
-<body bgcolor="#c3dde0">
+<body>
 <h2>PhoneGap Test Apps 1.7.1</h2>
 <ul>
  <li><a href='sqlite.html'>PhoneGap SQLite</a></li>
