Separating out the Styles into a CSS file

--- a/assets/www/gwcall.html
+++ b/assets/www/gwcall.html
@@ -3,34 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Call SAP Gateway</title>
-    <style type="text/css">
-			table.altrowstable {
-				font-family: verdana,arial,sans-serif;
-				font-size:11px;
-				color:#333333;
-				border-width: 1px;
-				border-color: #a9c6c9;
-				border-collapse: collapse;
-			}
-			table.altrowstable th {
-				border-width: 1px;
-				padding: 8px;
-				border-style: solid;
-				border-color: #a9c6c9;
-			}
-			table.altrowstable td {
-				border-width: 1px;
-				padding: 8px;
-				border-style: solid;
-				border-color: #a9c6c9;
-			}
-			.oddrowcolor{
-				background-color:#d4e3e5;
-			}
-			.evenrowcolor{
-				background-color:#c3dde0;
-			}
-	</style>
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <script type="text/javascript" charset="utf-8" src="cordova-1.8.1.js"></script>
     <script type="text/javascript" charset="utf-8" src="base64.js"></script>  
     <script type="text/javascript" charset="utf-8">
