--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello PhoneGap Storage</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <script type="text/javascript" charset="utf-8" src="cordova-1.8.1.js"></script>
     <script type="text/javascript" charset="utf-8">
     
