--- a/assets/www/gwcall.html
+++ b/assets/www/gwcall.html
@@ -16,20 +16,8 @@
 	// Cordova is ready let's get stated with the database stuff
     //
     function onDeviceReady(){
-		if(!window.openDatabase){
-		    alert('Databases are no supported on this device');
-		    return;
-		}
-		
-		db = openDatabase(shortName, version, displayName, maxSize);
-		// alert('Successfully opened the database');
-		
-		db.transaction(function(tx){
-		  tx.executeSql(createStatement, [], nullHandler,errorHandler);
-		},errorHandler,successCallBack);
-		
-		listDBValues();
-	    
+	    // enable the button now that the device is ready
+	    document.getElementById('btnKlick').disabled = false;
 	}
 	
 
@@ -40,6 +28,13 @@
 	}
 	
 	function readFromWeb(callback){
+	        // start by checking if there is any type of network connection
+	        if(navigator.network.connection.type === Connection.UNKNOWN || navigator.network.connection.type === Connection.NONE){
+	             document.getElementById('lbUsers').innerHTML = 'I cannot detect a suitable network connection to call ES Workplace. ' +
+	                  'Please make sure you have a network available before trying again';
+	             return;
+	        }
+	
 	        // encode username and password in basica authentication
 	        var auth = makeBasicAuth('I809781','SdF68nB3');
 			var req = new XMLHttpRequest();	
@@ -54,7 +49,7 @@
 					// get the type of response
 					var type = req.getResponseHeader("Content-Type");
 					if (type.indexOf("application/json") !== -1){
-						var agencytab = "<table class='altrowstable'><th>Agency:</th><th>Phone:</th><th>City:</th><th>Street:</th>";
+						var agencytab = "<table class='altrowstable' align='center'><th>Agency:</th><th>Phone:</th><th>City:</th><th>Street:</th>";
 						var obj = JSON.parse(req.responseText);
 						for (var i = 0; i < obj.d.results.length; i++ ){
 							if(i % 2 == 0){
@@ -79,15 +74,11 @@
 	
 	}
 	
-	function displaySalesOrders(salesorders){
-		
-	}
-	
     </script>
 </head>
 <body>
 <h3>List of Flight Agencies via SAP Gateway 2.0 SP4 and JSON</h3>
-<input type="button" value="Call SAP Gateway" onClick="readFromWeb()">
+<input id="btnKlick" type="button" value="Call SAP Gateway" onClick="readFromWeb()">
 <br><br> 
 <div id="lbUsers"></div> 
 </body>
