Cosmetic changes to HTML nothing important

--- a/assets/www/gwcall.html
+++ b/assets/www/gwcall.html
@@ -77,7 +77,7 @@
     </script>
 </head>
 <body>
-<h3>List of Flight Agencies via SAP Gateway 2.0 SP4 and JSON</h3>
+<h3>List of Flight-Agencies via SAP Gateway 2.0 SP4 and JSON</h3>
 <input id="btnKlick" type="button" value="Call SAP Gateway" onClick="readFromWeb()">
 <br><br> 
 <div id="lbUsers"></div> 
