--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 <body>
-<h2>PhoneGap Test Apps 1.7.2</h2>
+<h2>Gateway Apps on PhoneGap 1.7</h2>
+<ul>
+ <li><a href='gwcall.html'>SAP Gateway read Travel agencies</a></li>
+</ul>
+<h2>PhoneGap Test Apps</h2>
 <ul>
  <li><a href='sqlite.html'>PhoneGap: SQLite</a></li>
  <li><a href='network.html'>PhoneGap: Network</a></li>
- <li><a href='gwcall.html'>SAP Gateway read Travel agencies</a></li>
 </ul>
 </body>
 </html>
